<resources>
    <string name="app_name">TDDProyectoFinal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_text">Name: </string>
    <string name="nickname_text">Nickname: </string>
    <string name="favorites_text">Add to Favorites</string>
    <string name="details_text">More Details</string>
    <string name="occupation_text">Occupation:</string>
    <string name="birthday_text">Birthday:</string>
    <string name="status_text">Status:</string>
    <string name="portrayed_text">Portrayed:</string>
    <string name="appearances_text">Appearances:</string>
    <string name="filter_title">Filter</string>
    <string name="search_title">Search</string>
</resources>